--- a/tests/temp.conf
+++ b/tests/temp.conf
@@ -1,15 +1,4 @@
-#chat_proto = None
-#username = None
-#password = None
-#cmd_dir = cmds
-#rooms = []
-#nick_name = Sibyl
-#log_level = 20
-#log_file = data/sibyl.log
-#bw_list = [('w', '*', '*')]
-#chat_ctrl = False
-#cmd_prefix = None
-#except_reply = False
-#only_direct = True
-#catch_except = True
-#recon_wait = 60
+username = user
+password = pass
+server =  http://127.0.0.1
+log_level = debug
