--- a/init/sibyl.service
+++ b/init/sibyl.service
@@ -3,6 +3,7 @@ Description=Sibyl XMPP Bot
 After=network-online.target
 
 [Service]
+User=sibyl
 ExecStart=/home/jonathan/sources/sibyl/run.py
 
 [Install]
