updates examples after multi-protocol

--- a/example/sibyl.conf
+++ b/example/sibyl.conf
@@ -1,11 +1,12 @@
-username = sibyl@server.com
-password = wordpass
-rooms = room@conference.server.com
+protocols = xmpp
+xmpp.jid = sibyl@server.com
+xmpp.password = wordpass
+rooms = xmpp,room@conference.server.com
 cmd_prefix = !
 
-audio_dirs = /mnt/flashdrive/music
-video_dirs = /mnt/harddrive/videos;
-             mediaserver,Videos,username,password
+library.audio_dirs = /mnt/flashdrive/music
+library.video_dirs = /mnt/harddrive/videos;
+                     mediaserver,Videos,username,password
 
 admin_cmds = config,die,join,leave,log,reboot,xbmc
 admin_usrs = admin@server.com,someone@server.com
